<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.das.das_p1.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/userText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/usuarioHint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/passText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passHint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/inicioBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inicBut" />

        <TextView
            android:id="@+id/nuevoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuevoTV" />

        <Button
            android:id="@+id/regBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regBut" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
